[package]
name = "syn-select"
version = "0.2.0"
authors = ["Ted Driggs <t.driggs@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/TedDriggs/syn-select"
documentation = "https://docs.rs/syn-select/0.2.0"
description = """
A lightweight selector engine for searching Rust source code.
"""
readme = "README.md"

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "extra-traits"] }
